# wordle-analysis

./: CMakeLists.txt  main.cpp  wordle-0.json
feedback/: feedback.cpp  feedback.hpp
src/: words_in.cpp  words_in.hpp
word_node/: word_node.cpp  word_node.hpp
wordle_test/: wordle_test.cpp
